--- a/style.css
+++ b/style.css
@@ -2,3 +2,10 @@ body {
   margin: 0;
   padding: 0;
 }
+form {
+  background-color: blue;
+  color: white;
+  padding: 10px;
+  font-size: 20px;
+  text-align: center;
+}
